# bookshelf

./: .env.example  .env.rmq.example  .gitignore  Dockerfile.consumer  Dockerfile.fastapi  Dockerfile.grpc  LICENSE  README.md  docker-compose.yml  logging_config.py  pyproject.toml
app/: alembic.ini  constants.py  crud.py  docker-entrypoint.sh  main.py  models.py  schemas.py
app/alembic/: env.py
app/alembic/versions/: d50ab10fbd78-2024_10_07_0933-initial_migration.py
app/api/: book_endpoints.py  routers.py  validators.py
app/api/endpoints/: __init__.py  book.py
app/core/: base.py  config.py  db.py  init_db.py  user.py
app/grpc_service/: service.py
app/grpc_service/proto/: book.proto
app/models/: __init__.py  book.py  user.py
app/schemas/: book.py
broker/: config.py  consumer.py  publisher.py
grpc_service/: client.py  service.py
grpc_service/proto/: book_pb2.py  book_pb2_grpc.py
